# tac-hydro-be

./: .gitignore  README.md  check_fields.py  design.md  load_data.py  load_env.py  manage.py  pyproject.toml
about_us/: models.py  urls.py
about_us/migrations/: 0001_initial.py
about_us/serializers/: __init__.py  about_page_section.py  core_principle.py  core_principles_intro.py  team_category.py  team_member.py  team_member_category.py
about_us/views/: __init__.py  about_page_section.py  core_principle.py  core_principles_intro.py  team_category.py  team_member.py  team_member_category.py
contact_us/: models.py  urls.py
contact_us/migrations/: 0001_initial.py
contact_us/serializers/: __init__.py  initiate_synergy_section.py  job_application.py  job_category.py  job_posting.py  partnership_roadmap_section.py  partnership_roadmap_step.py
contact_us/views/: __init__.py  initiate_synergy_section.py  job_application.py  job_category.py  job_posting.py  partnership_roadmap_section.py  partnership_roadmap_step.py
data/: about_page_sections.json  banner.json  collaboration_sections.json  core_principles.json  core_principles_intro.json  expertise.json  gallery.json  news.json  projects.json  service_sectors.json  site_settings.json  team.json  valued_partners.json
galleries/: apps.py  models.py  urls.py
galleries/migrations/: 0001_initial.py
home/: models.py  urls.py
home/serializers/: news.py  (+6 more)
projects/: models.py  urls.py
services/: models.py  urls.py
tac_hydro/: api.py  asgi.py  extras.py  serializers.py  settings.py  urls.py  viewsets.py  wsgi.py
(+46 files in other folders)
