[project]
name = "tac-hydro-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.3",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.5.0",
    "django-cors-headers>=4.9.0",
    "psycopg[binary,pool]==3.3.3",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = ["ruff>=0.15.7", "ty>=0.0.24", "uv-secure>=0.17.0"]

[tool.ruff]
line-length = 120
target-version = "py314"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
